--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -18,4 +18,5 @@
 @using UdemyCarBook.DTOs.PricingDTOs
 @using UdemyCarBook.DTOs.LocationDTOs
 @using UdemyCarBook.DTOs.SocialMediaDTOs
+@using UdemyCarBook.DTOs.CarFeatureDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
