--- a/Frontends/UdemyCarBook.WebUI/Views/AdminLayout/AdminSidebarPartial.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/AdminLayout/AdminSidebarPartial.cshtml
@@ -3,7 +3,7 @@
     <div data-simplebar class="h-100">
 
         <div class="navbar-brand-box">
-            <a href="index.html" class="logo">
+            <a href="#" class="logo">
                 <i class="mdi mdi-alpha-x-circle"></i>
                 <span>CarBook Admin
                 </span>
