--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_DefaultLast5CarWithBrandsComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_DefaultLast5CarWithBrandsComponentPartial/Default.cshtml
@@ -11,25 +11,25 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="carousel-car owl-carousel">
-                    @foreach(var item in Model){
-                    <div class="item">
-                        <div class="car-wrap rounded ftco-animate">
-                            <div class="img rounded d-flex align-items-end" style="background-image: url(@item.CoverImageUrl);">
-                            </div>
-                            <div class="text">
-                                <h2 class="mb-0"><a href="#">@item.Model</a></h2>
-                                <div class="d-flex mb-3">
-                                    <span class="cat">@item.BrandName</span>
-                                    <p class="price ml-auto">₺1200 <span>/gün</span></p>
+                    @foreach (var item in Model)
+                    {
+                        <div class="item">
+                            <div class="car-wrap rounded ftco-animate">
+                                <div class="img rounded d-flex align-items-end" style="background-image: url(@item.CoverImageUrl);">
                                 </div>
-                                <p class="d-flex mb-0 d-block">
-                                    <a href="#" class="btn btn-primary py-2 mr-1">Aracı Kirala</a>
-                                    <a href="#" class="btn btn-secondary py-2 ml-1">Araç Detayları</a>
-
-                                </p>
+                                <div class="text">
+                                    <h2 class="mb-0"><a href="#">@item.Model</a></h2>
+                                    <div class="d-flex mb-3">
+                                        <span class="cat">@item.BrandName</span>
+                                        <p class="price ml-auto">₺1200 <span>/gün</span></p>
+                                    </div>
+                                    <p class="d-flex mb-0 d-block">
+                                        <a href="#" class="btn btn-primary py-2 mr-1">Aracı Kirala</a>
+                                        <a href="/Car/CarDetail/@item.Id" class="btn btn-secondary py-2 ml-1">Araç Detayları</a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
                     }
                 </div>
             </div>
