--- a/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/_ViewImports.cshtml
@@ -20,4 +20,7 @@
 @using UdemyCarBook.DTOs.CommentDTOs
 @using UdemyCarBook.DTOs.CarFeatureDTOs
 @using UdemyCarBook.DTOs.CarDescriptionDTOs
+@using UdemyCarBook.DTOs.CarReviewDTOs
+@using UdemyCarBook.DTOs.RegisterDTOs
+@using UdemyCarBook.DTOs.LoginDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
